--- a/app/src/main/res/layout/activity_inscripcion_children.xml
+++ b/app/src/main/res/layout/activity_inscripcion_children.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExpenseSummaryActivity">
+    tools:context=".InscripcionChildrenActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
